<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="blank">""</string>
    <string name="app_name">小丫定制</string>
    <string name="tab_home">首页</string>
    <string name="tab_works">作品</string>
    <string name="tab_order">订单</string>
    <string name="tab_me">我的</string>
    <string name="my_order">我的订单</string>
    <string name="add_picture">点击添加图片</string>
    <string name="tip_double_click_exit">再次点击退出小丫定制</string>
    <string name="please_edit_the_save">请先编辑在保存!</string>
    <string name="back">返回</string>
    <string name="edit_picture">编辑图片</string>
    <string name="edit">编辑</string>
    <string name="choice_picture">选择图片</string>
    <string name="buy">购买</string>
    <string name="start">开始</string>
    <string name="right_turn">右转90度</string>
    <string name="enlarge">放大</string>
    <string name="narrow">缩小</string>
    <string name="choice_frame">选择画框</string>
    <string name="choice_picture_first">请先选择你喜欢的照片</string>
    <string name="change_picture">更换图片</string>
    <string name="choice_picture_again">图片不够清晰，请重新选择图片</string>
    <string name="picture_lose">作品丢失，请重新编辑作品</string>
    <string name="choice_works">亲，还没选择作品！</string>
    <string name="save_success">保存图片成功!</string>
    <string name="load_msg">呃,页面加载失败</string>
    <string name="load_retry">重试</string>
    <string name="no_data">暂无数据</string>
    <string name="no_net">网络根本没连，赶紧检查</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="ok_pay">确定支付</string>
    <string name="save">保存</string>
    <string name="add">添加</string>
    <string name="no_freight">不包含运费</string>
    <string name="pay_mode">支付方式</string>
    <string name="now_buy">立即购买</string>
    <string name="jump">跳过</string>
    <string name="submit_order">提交订单</string>
    <string name="order_pay">订单支付</string>
    <string name="manage_address">地址管理</string>
    <string name="my_works">我的作品</string>
    <string name="add_address">添加地址</string>
    <string name="revise_address">修改地址</string>
    <string name="consignee">收货人:</string>
    <string name="shipping_address">收货地址：</string>
    <string name="express_mode">配送方式</string>
    <string name="please_express_mode">请选择配送方式</string>
    <string name="remarks">备注信息</string>
    <string name="consignee_phone">手机号码:</string>
    <string name="consignee_postcode">邮政编码:</string>
    <string name="consignee_area">所属区域:</string>
    <string name="consignee_detailed_area">详细地址:</string>
    <string name="num">数量：</string>
    <string name="total">合计:</string>
    <string name="jian">件&#160;&#160;</string>
    <string name="in_all">共 </string>
    <string name="subtotal">小计：</string>
    <string name="buy_num">购买数量</string>
    <string name="rmb">¥</string>
    <string name="pay_num">实付款：</string>
    <string name="pay">支付</string>
    <string name="al_pay">支付宝</string>
    <string name="wechat_pay">微信</string>
    <string name="delete">删除</string>
    <string name="one">1</string>
    <string name="default_address">默认</string>
    <string name="default_address_ed">已为默认</string>
    <string name="setting_default_address">设为默认</string>
    <string name="select_the_provinces">请选择省市区</string>
    <string name="please_input_name">请输入收货人!</string>
    <string name="please_input_phone">请输入收货人电话!</string>
    <string name="please_input_phone_null">请输入手机号码!</string>
    <string name="please_input_password_null">请输入密码!</string>
    <string name="please_input_code_null">请输入验证码!</string>
    <string name="please_input_phone_again">手机号码格式错误，请从新输入!</string>
    <string name="please_input_area">请选择区域!</string>
    <string name="please_input_detaile_area">请输入详细地址!</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="login">登录</string>
    <string name="account_login">账号登录</string>
    <string name="other_login">快捷登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="wechat_login">微信登录</string>
    <string name="sina_login">新浪登录</string>
    <string name="register">注册</string>
    <string name="reset_password">重置密码</string>
    <string name="fast_register">注册新账号</string>
    <string name="logout">退出登录</string>
    <string name="logout_ok">退出登录成功</string>
    <string name="please_login_first">请先登录</string>
    <string name="login_ok">登录成功</string>
    <string name="forget_password">忘记密码?</string>
    <string name="input_telephone_init">手机</string>
    <string name="input_code_init">验证码</string>
    <string name="password_init">密码</string>
    <string name="set_password">设置密码</string>
    <string name="input_new_password">新密码</string>
    <string name="send_code">获取验证码</string>
    <string name="i_see_and_agree">点击注册按钮，表示你已经已阅读并同意</string>
    <string name="request_service_failure">请求服务失败</string>
    <string name="login_success">登录成功</string>
    <string name="no_address">没有地址信息，点击新添加</string>
    <string name="no_login">请先登录</string>
    <string name="down_state">正在下载：%s</string>
    <string name="order_money">支付金额</string>
    <string name="order_state">支付状态</string>
    <string name="pay_state">支付状态</string>
    <string name="order_id">订单号</string>
    <string name="goods_name">商品名称</string>
    <string name="goto_home">返回首页 </string>
    <string name="share">分享</string>
    <string name="order_details">订单详情</string>
    <string name="all_choice">全选</string>
    <string name="all_no_choice">全不选</string>
    <string name="do_pay_mun">需付款</string>
    <string name="get_code_s">秒后重新获取</string>
    <string name="get_code_again">点击获取验证码</string>
    <string name="do_you_want_to_quit_editing">是否退出编辑?</string>
    <string name="go_on_editing">继续编辑</string>
    <string name="download_title">正在下载%s</string>
    <string name="download_over">下载完成</string>
    <string name="file_download_over">文件已下载完毕</string>
    <string name="ready_download">准备下载</string>
    <string name="no_immediate_update">发现有新版本是否立即更新</string>
    <string name="check_for_updates">检查更新</string>
    <string name="now_updates">马上升级</string>
    <string name="later_on">稍后再说</string>
    <string name="delete_works">是否删除作品！</string>
    <string name="cancel">取消</string>
    <string name="have_account">已有账号？直接登录</string>
    <string name="read_and_agree">阅读并同意</string>
    <string name="agree_treaty">同意《用户协议》方可注册</string>
    <string name="xydz_treaty">《用户协议》</string>
    <string name="no_order_info">亲，暂时没有订单哦！</string>
    <string name="no_works_info">作品还是空的，去逛逛吧！</string>
    <string name="go_see">去逛逛</string>
    <string name="order_payment_success">订单已支付完成</string>
    <string name="paymented">已支付</string>
    <string name="congratulations">恭喜您</string>
    <string name="see_order_details">查看订单详情</string>
    <string name="input_remarks_init">给卖家留言（0/50）</string>
    <string name="you_place_an_order">你已经下单，不要从复下单哦</string>
    <string name="add_receipt_address">新增收货地址</string>
    <string name="landing_on">正在登陆，请骚后！</string>
    <string name="please_login">请登录</string>
    <string name="cancel_order">取消订单</string>
    <string name="payment">付款</string>
    <string name="now_custom_made">马上定制</string>
    <string name="no_way_change">本次操作将无法撤销，确定要取消订单？</string>
    <string name="cancel_order_ok">成功取消订单</string>
    <string name="cancelled">已作废</string>
    <string name="order_state_add">订单状态:</string>
    <string name="order_id_add">订单编号:</string>
    <string name="discount_add">优惠</string>
    <string name="shipping_add">运费</string>
    <string name="real_payment_add">实付款</string>
    <string name="logistics_details">物流详情</string>
    <string name="goods_details">商品详情</string>
    <string name="setting">设置</string>
    <string name="personal_setting">个人设置</string>
    <string name="app_update">检查更新</string>
    <string name="app_share">应用分享</string>
    <string name="goods_update">商品更新</string>
    <string name="is_the_latest_version">已是最新版本</string>
    <string name="share_success"> 分享成功啦</string>
    <string name="share_error"> 分享失败啦</string>
    <string name="share_cancel"> 分享取消了</string>
    <string name="goods_update_success">商品更新成功</string>
    <string name="about_me">关于我们</string>
    <string name="help">帮助指引</string>
    <string name="suggestions">反馈建议</string>
    <string name="contact_us">联系我们</string>
    <string name="disclaimer">免责声明</string>
    <string name="treaty">用户协议</string>
    <string name="code_has_been_sent">您的验证码已发送!</string>
    <string name="revoked">已作废</string>
    <string name="no_more">没有更多</string>
    <string name="express">快递</string>
    <string name="init_words">点击这里写点什么</string>
    <string name="edit_words">编辑文字</string>
    <string name="init_words_edit">点击输入文案</string>
    <string name="hint_remain_count">您还可以输入%s字</string>
    <string name="hint_max_length_msg">最多只能输入%s字</string>
    <string name="pay_failure">支付失败</string>
    <string name="share_app_info">手机壳个性定制|个性定制礼品|手机壳定制|苹果手机壳定制|iPhone手机壳定制|三星手机壳定制|华为手机壳定制</string>
    <string name="share_works_info">我在小丫定制用手机照片制作了一个手机壳，设计超赞，使用简单，小伙伴赶快试一下吧。</string>
    <string name="material">材质</string>
    <string name="model">型号</string>
    <string name="please_choose_model">请选手机型号</string>
    <string name="free_shipping">免邮</string>
    <string name="consignee_add_b">收货人:&#160;&#160;&#160;&#160;</string>
    <string name="add_address_success">添加地址成功</string>
    <string name="update_address_success">更新地址成功</string>
    <string name="delete_address_success">删除地址成功</string>
    <string name="set_default_address_success">设置默认地址成功</string>
    <string name="temporary_no_data">暂时没有数据</string>
    <string name="dialog_info_save_works">正在保存作品</string>
    <string name="dialog_info_create_order">正在生成订单</string>
    <string name="dialog_info_login">正在登录</string>
    <string name="loading">正在加载</string>
    <string name="system_maintenance">机器维护中，暂停接单…</string>
    <string name="back_last_page">返回上一页</string>

</resources>