<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="68dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/failure_wifi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/no_net"
        android:textColor="#a4a4a4"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/wifi_retry"
        android:layout_width="133dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/load_failure_bg"
        android:gravity="center"
        android:text="@string/load_retry"
        android:textColor="#666666"
        android:textSize="14sp" />

</LinearLayout>