<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_null"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/prompt_image"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/works_null" />

    <TextView
        android:id="@+id/prompt_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prompt_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/no_works_info" />

    <Button
        android:id="@+id/go_see"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prompt_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/go_see"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>