<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="52dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <include layout="@layout/view_s_line" />

        <RelativeLayout
            android:id="@+id/choice_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center|left"
            android:paddingLeft="@dimen/main_margin"
            android:paddingRight="@dimen/main_margin" >

            <ImageView
                android:id="@+id/all_choice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dip"
                android:gravity="center"
                android:layout_marginRight="10dip"
                android:contentDescription="@string/app_name"
                android:src="@drawable/checkbox_normal" />

            <TextView
                android:id="@+id/checkbox_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/all_choice"
                android:gravity="center"
                android:text="@string/all_choice"
                android:textColor="@color/text_color_gray_c"
                android:textSize="17sp" />
        </RelativeLayout>

        <include layout="@layout/view_s_line" />
    </LinearLayout>

    <TextView
        android:id="@+id/now_buy"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/now_buy"
        android:gravity="center"
        android:paddingLeft="@dimen/main_margin"
        android:paddingRight="@dimen/main_margin"
        android:text="@string/now_buy"
        android:textColor="@color/white"
        android:layout_marginBottom="0.5dp"
        android:textSize="20sp" >
    </TextView>

</LinearLayout>